# GAL

./: .gitignore  CMakeLists.txt  README.md  copy_assets.cmake
cmake/: GALConfig.cmake.in
dev/: CMakeLists.txt  dev.cpp
examples/: example.cpp
examples/window/: CMakeLists.txt  window.cpp
include/GAL/: config.hpp  gal.hpp  glmIncludes.hpp  types.hpp
include/GAL/core/: GALException.hpp  Window.hpp  core.hpp  enums.hpp  init.hpp  keyboard.hpp
include/GAL/debug/: debug.hpp
include/GAL/detail/: ResourceRegistry.hpp  UniqueHandle.hpp  detail.hpp  logging.hpp
include/GAL/graphics/: Buffer.hpp  Program.hpp  Shader.hpp  VertexArray.hpp  graphics.hpp
include/GAL/system/: GLParams.hpp  system.hpp  time.hpp
unit-tests/: CMakeLists.txt  main.cpp  test_RAII.cpp
